--- a/Site/package.json
+++ b/Site/package.json
@@ -10,7 +10,8 @@
     "boostrap": "^2.0.0",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
+    "dotenv": "^8.2.0",
+    "ejs": "^2.6.2",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
