--- a/Site/package.json
+++ b/Site/package.json
@@ -21,6 +21,10 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-twitter": "^1.0.4",
     "sequelize": "^6.6.1"
   },
   "devDependencies": {
